fixed mismatched tags in activity_emotion_pics and activity_emotion_def that prevented files from compiling

--- a/app/src/main/res/layout/activity_emotion_def.xml
+++ b/app/src/main/res/layout/activity_emotion_def.xml
@@ -47,7 +47,7 @@
         android:layout_marginTop="61dp"
         android:layout_marginBottom="16dp"
         android:text="What does being blank mean?"
-        android:textsize="100dp"
+        android:textSize="100dp"
         app:layout_constraintBottom_toTopOf="@+id/emotion_pic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
