--- a/app/src/main/res/layout-land/activity_games.xml
+++ b/app/src/main/res/layout-land/activity_games.xml
@@ -72,6 +72,7 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="24dp"
+                        android:onClick="playGame"
                         android:text="Play" />
                 </LinearLayout>
 
