--- a/app/src/main/res/layout-land/activity_emotions.xml
+++ b/app/src/main/res/layout-land/activity_emotions.xml
@@ -11,9 +11,8 @@
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
+        android:layout_margin="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="80dp"
         android:text="Select an emotion"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
