--- a/app/src/main/res/layout-land/activity_emotion_def.xml
+++ b/app/src/main/res/layout-land/activity_emotion_def.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Emotion_defActivity">
+    tools:context=".Emotion_defActivity"
+    tools:ignore="MissingDefaultResource">
 
-    <View
-        android:id="@+id/emotion_pic"
+    <ImageView
+        android:id="@+id/pic"
         android:layout_width="366dp"
         android:layout_height="0dp"
         android:layout_marginStart="19dp"
@@ -22,8 +23,8 @@
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
     <TextView
-        android:id="@+id/emotion_def"
-        android:layout_width="0dp"
+        android:id="@+id/definition"
+        android:layout_width="166dp"
         android:layout_height="0dp"
         android:layout_marginTop="104dp"
         android:layout_marginEnd="16dp"
@@ -33,22 +34,22 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/next_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/emotion_pic"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toEndOf="@+id/pic"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/header"
         android:layout_width="wrap_content"
-        android:layout_height="27dp"
+        android:layout_height="29dp"
         android:layout_marginStart="19dp"
         android:layout_marginLeft="19dp"
         android:layout_marginTop="61dp"
         android:layout_marginBottom="16dp"
         android:text="What does being blank mean?"
-        android:textSize="100dp"
-        app:layout_constraintBottom_toTopOf="@+id/emotion_pic"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/pic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,6 +65,6 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/emotion_pic"
-        app:layout_constraintTop_toBottomOf="@+id/emotion_def" />
+        app:layout_constraintStart_toEndOf="@+id/pic"
+        app:layout_constraintTop_toBottomOf="@+id/definition" />
 </android.support.constraint.ConstraintLayout>
