--- a/app/src/main/res/layout-land/activity_games.xml
+++ b/app/src/main/res/layout-land/activity_games.xml
@@ -39,7 +39,7 @@
                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="320dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:adjustViewBounds="true"
                         android:background="@drawable/placeholder"
                         android:cropToPadding="false" />
@@ -58,11 +58,11 @@
                     <TextView
                         android:id="@+id/textView7"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Match the emotions to the facial expressions!" />
+                        android:text="Choose the right emotion for each facial expression!" />
 
                     <Button
                         android:id="@+id/button3"
@@ -70,7 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="8dp"
                         android:onClick="playGame"
                         android:text="Play" />
                 </LinearLayout>
@@ -84,7 +84,7 @@
                     <ImageView
                         android:id="@+id/imageView6"
                         android:layout_width="320dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:adjustViewBounds="true"
                         android:background="@drawable/placeholder"
                         android:cropToPadding="false" />
@@ -96,18 +96,18 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Matching Game"
+                        android:text="Game 2"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textView11"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Match the emotions to the facial expressions!" />
+                        android:text="[Description of game]" />
 
                     <Button
                         android:id="@+id/button5"
@@ -115,7 +115,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="8dp"
                         android:text="Play" />
                 </LinearLayout>
 
@@ -128,7 +128,7 @@
                     <ImageView
                         android:id="@+id/imageView6"
                         android:layout_width="320dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:adjustViewBounds="true"
                         android:background="@drawable/placeholder"
                         android:cropToPadding="false" />
@@ -140,18 +140,18 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Matching Game"
+                        android:text="Game 3 "
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textView11"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Match the emotions to the facial expressions!" />
+                        android:text="[Description of game]" />
 
                     <Button
                         android:id="@+id/button5"
@@ -159,7 +159,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="8dp"
                         android:text="Play" />
                 </LinearLayout>
 
