--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,9 @@
     <color name="blue">#90CAF9</color>
     <color name="purple">#9FA8DA</color>
     <color name="orange">#FFCC80</color>
+
+
+    <!--color for text -->
+    <color name="error">#D81B60</color>
+    <color name="success">#00695C</color>
 </resources>
