added images for games

--- a/app/src/main/res/layout-land/activity_games.xml
+++ b/app/src/main/res/layout-land/activity_games.xml
@@ -41,8 +41,8 @@
                         android:layout_width="320dp"
                         android:layout_height="100dp"
                         android:adjustViewBounds="true"
-                        android:background="@drawable/placeholder"
-                        android:cropToPadding="false" />
+                        android:cropToPadding="false"
+                        app:srcCompat="@drawable/happy_game" />
 
                     <TextView
                         android:id="@+id/textView6"
@@ -51,7 +51,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Matching Game"
+                        android:text="Happiness Game"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -62,7 +62,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Choose the right emotion for each facial expression!" />
+                        android:text="Test your understanding of happiness! Select the images that are happy." />
 
                     <Button
                         android:id="@+id/button3"
@@ -71,8 +71,10 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="8dp"
+                        android:background="@color/colorPrimaryDark"
                         android:onClick="playGame"
-                        android:text="Play" />
+                        android:text="Play"
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -86,17 +88,17 @@
                         android:layout_width="320dp"
                         android:layout_height="100dp"
                         android:adjustViewBounds="true"
-                        android:background="@drawable/placeholder"
-                        android:cropToPadding="false" />
+                        android:cropToPadding="false"
+                        app:srcCompat="@drawable/matching_game" />
 
                     <TextView
                         android:id="@+id/textView10"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Game 2"
+                        android:text="Matching Game"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -107,7 +109,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="[Description of game]" />
+                        android:text="Choose the matching emotion for each of the images displayed!" />
 
                     <Button
                         android:id="@+id/button5"
@@ -116,22 +118,24 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="8dp"
-                        android:text="Play" />
+                        android:background="@color/colorPrimaryDark"
+                        android:text="Play"
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:drawable/dialog_holo_light_frame"
                     android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/imageView6"
-                        android:layout_width="320dp"
+                        android:layout_width="300dp"
                         android:layout_height="100dp"
                         android:adjustViewBounds="true"
-                        android:background="@drawable/placeholder"
-                        android:cropToPadding="false" />
+                        android:cropToPadding="false"
+                        app:srcCompat="@drawable/sad_game" />
 
                     <TextView
                         android:id="@+id/textView10"
@@ -140,7 +144,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Game 3 "
+                        android:text="Sadness Game"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -151,7 +155,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="[Description of game]" />
+                        android:text="Test your understanding of sadness! Select the images that are sad." />
 
                     <Button
                         android:id="@+id/button5"
@@ -160,7 +164,9 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="8dp"
-                        android:text="Play" />
+                        android:background="@color/colorPrimaryDark"
+                        android:text="Play"
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
             </LinearLayout>
