--- a/app/src/main/res/layout-land/activity_congrats.xml
+++ b/app/src/main/res/layout-land/activity_congrats.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    tools:context=".CongratsActivity"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    tools:context=".CongratsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:layout_height="160dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="false"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/congrats" />
 
         <TextView
             android:id="@+id/textView5"
