--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,11 @@
 
     <!--colors of the splash page-->
     <color name="colorPrimary">#E0F7FA</color>
-    <color name="colorPrimaryDark">#0097A7</color>
+    <color name="colorPrimaryDark">#0097a7</color>
     <color name="colorAccent">#455A64</color>
 
     <!--miscelaneous-->
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
 
     <!--color from emotion buttons-->
     <color name="yellow">#FFE082</color>
