--- a/app/src/main/res/layout-land/activity_emotion_pics.xml
+++ b/app/src/main/res/layout-land/activity_emotion_pics.xml
@@ -1,152 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Emotion_picsActivity"
-    tools:layout_editor_absoluteY="25dp"
+    tools:context=".Emotion_defActivity"
     tools:ignore="MissingDefaultResource">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="24dp">
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="547dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="When people are "
+            android:textSize="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="0dp">
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="24dp">
 
-    <ImageView
-        android:id="@+id/scenario1_pic"
-        class="android.support.constraint.Placeholder"
-        android:layout_width="178dp"
-        android:layout_height="113dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/scenario2_pic"
-        app:layout_constraintHorizontal_bias="0.36"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    android:id="@+id/scenario1_pic"
+                    class="android.support.constraint.Placeholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"/>
 
-    <ImageView
-        android:id="@+id/scenario2_pic"
-        class="android.support.constraint.Placeholder"
-        android:layout_width="178dp"
-        android:layout_height="113dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="84dp"
-        app:layout_constraintEnd_toStartOf="@+id/scenario3_pic"
-        app:layout_constraintStart_toEndOf="@+id/scenario1_pic"
-        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/scenario1_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="Scenario 1"
+                    android:paddingTop="10dp"
+                    android:textSize="18dp"/>
+            </LinearLayout>
 
-    <ImageView
-        android:id="@+id/scenario3_pic"
-        class="android.support.constraint.Placeholder"
-        android:layout_width="178dp"
-        android:layout_height="113dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/scenario2_pic"
-        app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="24dp">
+                <ImageView
+                    android:id="@+id/scenario2_pic"
+                    class="android.support.constraint.Placeholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp" />
 
-    <TextView
-        android:id="@+id/scenario1_text"
-        android:layout_width="127dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="8dp"
-        android:text="Scenario 1"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/scenario2_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scenario1_pic"
-        app:layout_constraintVertical_bias="0.176" />
+                <TextView
+                    android:id="@+id/scenario2_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="Scenario 2"
+                    android:textSize="18dp"
+                    android:paddingTop="10dp"/>
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/scenario2_text"
-        android:layout_width="120dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="8dp"
-        android:text="Scenario 2"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/scenario3_text"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/scenario1_text"
-        app:layout_constraintTop_toBottomOf="@+id/scenario2_pic"
-        app:layout_constraintVertical_bias="0.027" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="24dp">
+                <ImageView
+                    android:id="@+id/scenario3_pic"
+                    class="android.support.constraint.Placeholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"/>
 
-    <TextView
-        android:id="@+id/scenario3_text"
-        android:layout_width="113dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
+                <TextView
+                    android:id="@+id/scenario3_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="Scenario 3"
+                    android:paddingTop="10dp"
+                    android:textSize="18dp" />
+            </LinearLayout>
+        </LinearLayout>
 
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="8dp"
-        android:text="Scenario 3"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/scenario2_text"
-        app:layout_constraintTop_toBottomOf="@+id/scenario3_pic"
-        app:layout_constraintVertical_bias="0.225" />
-
-    <TextView
-        android:id="@+id/header"
-        android:layout_width="547dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="When people are "
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/scenario1_pic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.275"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.916" />
-
-    <Button
-        android:id="@+id/next_button"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="NEXT"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scenario3_text"
-        app:layout_constraintVertical_bias="1.0" />
-
-
-
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="284dp"
+            android:layout_gravity="right"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="NEXT"
+            android:textColor="@color/white" />
+    </LinearLayout>
+</LinearLayout>
