--- a/app/src/main/res/layout-land/activity_emotion_def.xml
+++ b/app/src/main/res/layout-land/activity_emotion_def.xml
@@ -8,7 +8,7 @@
     tools:ignore="MissingDefaultResource">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="900dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
@@ -18,16 +18,17 @@
             android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
             android:text="What does being blank mean?"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/pic"
             android:layout_width="match_parent"
-            android:layout_marginTop="15dp"
-            android:layout_height="151dp"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -35,24 +36,26 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:padding="24dp">
+        android:padding="16dp"
+        android:paddingLeft="0dp">
+
         <TextView
             android:id="@+id/definition"
             android:layout_width="match_parent"
             android:layout_height="151dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="60dp"
             android:text="blank"
             android:textSize="20dp" />
 
 
-
         <Button
             android:id="@+id/next_button"
-            android:layout_width="match_parent"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
             android:layout_marginTop="20dp"
             android:background="@color/colorPrimaryDark"
             android:text="NEXT"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
     </LinearLayout>
 </LinearLayout>
