--- a/app/src/main/res/layout-land/activity_emotion_vid.xml
+++ b/app/src/main/res/layout-land/activity_emotion_vid.xml
@@ -4,62 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Emotion_vidActivity"
     tools:ignore="MissingDefaultResource">
+
+    <TextView
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:text="What does being blank mean?"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <VideoView
+        android:id="@+id/video"
+        android:layout_width="wrap_content"
+        android:layout_height="320dp"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_margin="8dp"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:text="blank"
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:padding="24dp">
-
-        <TextView
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center_horizontal"
-            android:text="What does being blank mean?"
-            android:textSize="20dp" />
-
-        <VideoView
-            android:id="@+id/video"
-            android:layout_width="match_parent"
-            android:layout_marginTop="15dp"
-            android:layout_height="151dp"/>
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/home_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="back to home"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:padding="24dp">
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="151dp"
-            android:layout_marginTop="50dp"
-            android:text="blank"
-            android:textSize="20dp" />
-
+            android:layout_margin="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="back to home" />
 
         <Button
             android:id="@+id/quiz_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
             android:text="Take a quiz"
             android:textColor="@color/white" />
