--- a/app/src/main/res/layout-land/activity_game3.xml
+++ b/app/src/main/res/layout-land/activity_game3.xml
@@ -16,7 +16,9 @@
             android:id="@+id/prompt3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Which image represents happiness?" />
+            android:text="Which image represents happiness?"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
