--- a/app/src/main/res/layout-land/activity_emotion_pics.xml
+++ b/app/src/main/res/layout-land/activity_emotion_pics.xml
@@ -13,52 +13,57 @@
         android:layout_weight="1"
         android:orientation="vertical"
         android:padding="24dp">
+
         <TextView
             android:id="@+id/header"
             android:layout_width="547dp"
             android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="When people are "
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:padding="0dp">
+
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="24dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/scenario1_pic"
                     class="android.support.constraint.Placeholder"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"/>
+                    android:layout_height="100dp" />
 
                 <TextView
                     android:id="@+id/scenario1_text"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:text="Scenario 1"
+                    android:layout_height="64dp"
                     android:paddingTop="10dp"
-                    android:textSize="18dp"/>
+                    android:text="Scenario 1"
+                    android:textSize="18dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="24dp">
+                android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/scenario2_pic"
                     class="android.support.constraint.Placeholder"
@@ -68,39 +73,40 @@
                 <TextView
                     android:id="@+id/scenario2_text"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="64dp"
+                    android:paddingTop="10dp"
                     android:text="Scenario 2"
-                    android:textSize="18dp"
-                    android:paddingTop="10dp"/>
+                    android:textSize="18dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="24dp">
+                android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/scenario3_pic"
                     class="android.support.constraint.Placeholder"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"/>
+                    android:layout_height="100dp" />
 
                 <TextView
                     android:id="@+id/scenario3_text"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:text="Scenario 3"
+                    android:layout_height="64dp"
                     android:paddingTop="10dp"
+                    android:text="Scenario 3"
                     android:textSize="18dp" />
             </LinearLayout>
         </LinearLayout>
 
         <Button
             android:id="@+id/next_button"
-            android:layout_width="284dp"
-            android:layout_gravity="right"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_marginTop="8dp"
             android:background="@color/colorPrimaryDark"
             android:text="NEXT"
