--- a/app/src/main/res/layout-land/activity_game1.xml
+++ b/app/src/main/res/layout-land/activity_game1.xml
@@ -17,7 +17,8 @@
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Which image represents happiness?"
-             android:textSize="16sp" />
+             android:textSize="16sp"
+             android:textStyle="bold" />
          <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
