--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!--colors of the splash page-->
-    <color name="colorPrimary">#E0F7FA</color>
+    <color name="colorPrimary">#e0f7fa</color>
     <color name="colorPrimaryDark">#0097a7</color>
     <color name="colorAccent">#455A64</color>
 
